Fix image on IE11, fix font sizes

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -2,7 +2,7 @@
   padding: 2rem 5rem 2rem 5rem;
 
   .contact-header {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 800;
     text-transform: uppercase;
     color: #1e2123;
