--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -13,7 +13,7 @@
 
     .header-title {
       padding: 2rem 2rem 2rem 2rem;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       font-weight: 800;
       text-transform: uppercase;
     }
@@ -61,9 +61,10 @@
     width: 60%;
 
     .logo {
-      content: url("../images/header.png");
-      width: 100%;
-      height: auto;
+      background: url("../images/header.png") no-repeat 0 0;
+      background-size: cover;
+      min-width: 100%;
+      height: inherit;
       max-height: 65%;
     }
 
