--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -50,7 +50,7 @@
 
     .nav-title {
       float: left;
-      font-size: 1.2rem;
+      font-size: 1.6rem;
 
       .nav-bold-title {
         font-weight: 800;
